[package]
name = "fat32"
version = "0.1.1"
authors = ["spxg <itsme@spxg.me>"]
edition = "2018"
description = "A simple fat32 filesystem"
keywords = ["sdcard", "fat", "embedded", "stm32f407", "filesystem"]
categories = ["embedded", "no-std"]
repository = "https://github.com/play-stm32/fat32"
readme = "README.md"
license = "MIT"

[features]
default = ["512"]
512 = []
1024 = []
2048 = []
4086 = []